--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/AllThuongHieuManager.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/ThuongHieu/AllThuongHieuManager.cshtml
@@ -18,7 +18,7 @@
     </form>
 </div>
 <div>
-    <a asp-action="CreateThuongHieu" class="btn btn-primary">Thêm Thương Hiệu</a>
+    <a class="btn btn-primary" id="btn_add">Thêm Thương Hiệu</a>
 </div>
 <div id="thuongHieuList">
     <table class="table">
@@ -73,3 +73,54 @@
     </table>
 </div>
 
+<div class="modal fade" tabindex="-1" id="pp_modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Thêm Thương Hiệu Mới</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="name" class="form-label">Tên Thương Hiệu</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="btn_save">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script>
+$(document).ready(function () {
+    // Hiển thị modal thêm chất liệu mới
+    $('#btn_add').on('click', function () {
+        setdata(null);
+        $('#pp_modal').modal('show');
+    });
+
+    // Lưu chất liệu mới
+    $('#btn_save').on('click', function () {
+        $.post('/Admin/ThuongHieu/CreateThuongHieu', { TenMau: $('#name').val() }, function (response) {
+            if (response) {
+                alert("Thêm thành công!");
+                $('#pp_modal').modal('hide');
+                window.location.reload();
+            } else {
+                alert("Thêm thất bại. Vui lòng thử lại.");
+            }
+        });
+    });
+});
+
+// Thiết lập dữ liệu cho modal
+function setdata(data) {
+    $('#name').val('');
+}
+</script>
